# ESP32-S3-BOX-3-rs

./: .envexample  .gitignore  Cargo.toml  README.md  docker-compose.yaml  flake.nix
.cargo/: config.toml
assets/: index.html  static.js
resource/: README.md
resource/components/: spk
resource/components/esp-adf-rs/: audio-url.rs
src/: aht20.rs  api.rs  audio_input.rs  buttons.rs  es7210.rs  es8311.rs  macros.rs  main.rs  media.rs  mic.rs  microphone.rs  ota_updater.rs  presence.rs  speaker.rs  wifi.rs
